more details added

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
 
 <!-- foote stuff here -->
-<div class="foot">
-    
+<div class="footer">
+    <img src="Images/foter.png" alt="footer">
+ 
 
-<div class="contact"></div>
 </div>
 
 </body>
